# sweeps

./: .gitignore  Grid Game Card Game RULES.docx  ScopeOfWork-SweepsNumbers.txt  ScopeOfWork-SweepsNumbers1.txt  scope_of_work.txt
.github/workflows/: build-macos.yml
docs/superpowers/plans/: 2026-03-23-detailed-export.md  2026-03-23-initial-flip-strategy.md  2026-03-23-starting-order-and-export-fix.md  2026-03-24-ai-archetype-strategy.md  2026-03-24-variable-players-and-draw-tracking.md  2026-03-25-methodical-beginner-rework.md  2026-03-25-shapes-game-mode.md
docs/superpowers/specs/: 2026-03-23-detailed-export-design.md  2026-03-23-initial-flip-strategy-design.md  2026-03-23-starting-order-and-export-fix-design.md  2026-03-24-ai-archetype-strategy-design.md  2026-03-24-variable-players-and-draw-tracking-design.md  2026-03-25-methodical-beginner-rework-design.md  2026-03-25-shapes-game-mode-design.md
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/engine/: card.rs  config.rs  game.rs  grid.rs  mod.rs  strategy.rs
src-tauri/src/engine/strategy/: calculator.rs  line_scoring.rs  methodical.rs  mod.rs  opportunist.rs
src-tauri/src/history/: compare.rs  mod.rs  store.rs
src-tauri/src/interactive/: state.rs
src-tauri/src/simulation/: mod.rs  runner.rs  stats.rs
src-tauri/tests/: smoke_test.rs
src/js/: app.js  charts.js  config-panel.js  history-panel.js  play-panel.js  tauri-bridge.js
src/styles/: main.css
