[package]
name = "number-sweep-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "number_sweep_sim"
path = "src/lib.rs"

[[bin]]
name = "number-sweep-sim"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rayon = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }
